# PytoTune

./: .gitignore  CMakeLists.txt  COMMIT_MESSAGE.txt  IMPLEMENTATION_SUMMARY.md  LICENSE  LIVE_MODE.md  QUICK_REFERENCE.md  README.md  TROUBLESHOOTING.md  debug_live.py  debug_processing.py  example_array_api.py  live_autotune.py  requirements_live.txt  setup_live.sh  simple_live.py  test_audio.py  test_bindings.py  vtune_line_report.sh
.github/ISSUE_TEMPLATE/: feature.md
.github/workflows/: ci.yml  paper.yml
benchmarks/: benchmark.cpp  benchmark_pipeline_midi.sh  benchmark_pipeline_scale.sh  benchmark_pitch_correction.sh  benchmark_pitch_correction_midi.sh  benchmark_pitch_correction_scale.sh  benchmark_pitch_detection.sh  benchmark_pitch_detection_midi.sh  benchmark_pitch_detection_scale.sh  benchmark_pitch_shift_to_midi.sh  cache_line_report.csv  line_report.txt  results_pipeline_midi.csv  results_pipeline_scale.csv  results_pitch_correction.csv  results_pitch_correction.txt  results_pitch_correction_midi.csv  results_pitch_correction_scale.csv  results_pitch_detection.csv  results_pitch_detection.txt  results_pitch_detection_midi.csv  results_pitch_detection_scale.csv  vtune_cache_analysis.sh  vtune_line_report.sh
benchmarks/perfevent/: PerfEvent.hpp
data-structures/: Mode.cpp  Mode.h  ModeTemplates.cpp  ModeTemplates.h  Scale.cpp  Scale.h
highway/: CMakeLists.txt
include/pytotune/: api.h  wav_reader.h  yin_pitch_detector.h
include/pytotune/algorithms/: PitchShifter.h  fft.h  pitch_correction_pipeline.h  pitch_shifter.h  yin_pitch_detector.h
include/pytotune/data-structures/: Scale.h  mode.h  scale.h  windowing.h
include/pytotune/io/: midi_file.h  wav_file.h
midi-reader/: MidiFile.cpp  MidiFile.h
paper/: literature.bib  paper.tex  thoughts.md
src/: api.cpp  cli.cpp  main.cpp  python_bindings.cpp  wav_reader.cpp  yin_pitch_detector.cpp
src/algorithms/: PitchShifter.cpp  fft.cpp  pitch_correction_pipeline.cpp  pitch_shifter.cpp  yin_pitch_detector.cpp
src/data-structures/: Mode.cpp  Scale.cpp  mode.cpp  scale.cpp  windowing.cpp
src/io/: midi_file.cpp  wav_file.cpp
tests/: pitch_detection.cpp  test_api.cpp  test_autotune.cpp  test_midi_reader.cpp  test_utils.h  test_wav_reader.cpp  visualize-pitches.py
tests/algorithms/: pitch_detection.cpp  test_fft.cpp  test_pitch_correction_pipeline.cpp  test_pitch_detection.cpp  test_pitch_shifter.cpp
tests/data/: README.md  test.mid
tests/data-structures/: test_scale.cpp  test_windowing.cpp
tests/data/ABSounds/: be-beautiful-attribution.txt  be-beautiful.m4a  female-ohh-attribution.txt  female-phrase-attribution.txt  lalala-attribution.txt
tests/data/benchmarking/: Crappy Elise.mid  for-elise-10x.mid
tests/io/: test_midi_file.cpp  test_wav_file.cpp
tests/reference/: hwy_reference.cpp  pitch_shifter_reference.cpp  pitch_shifter_reference.h
tests/vtune/: vtune_cache_analysis.sh  vtune_line_report.sh
